Right-align export form; fix overflow

--- a/src/styles/base/_elements.scss
+++ b/src/styles/base/_elements.scss
@@ -15,3 +15,7 @@ body {
 button {
     cursor: pointer;
 }
+
+* {
+    box-sizing: border-box;
+}
